Fix quotes background position on mobile.

--- a/scss/site/_home.scss
+++ b/scss/site/_home.scss
@@ -230,6 +230,7 @@ section.quotes {
 	text-align: center;
 	background-image: url('../assets/img/bg-quote.jpg');
 	background-repeat: no-repeat;
+	background-position: center center;
 
 	&.parallax {
 		background-attachment: fixed !important;
